0.17 -

- Maker::Vcard#fullname - new

- Provide an example of how to create, copy, and modify version 2.1 vCards.

- Maker::Vcard.make2 - new

- Maker::Vcard.make - deprecated

- Profiled decoding of a huge iCalendar file. Performance appears to be
	dominated by overhead of String#downcase (20% of time spent in Field#name?).
	Keeping the field group, field name, and field's parameter's names internally
	in uppercase and using ruby 1.8's String#casecmp? is a first attempt at
	optimization. This is a change in the default case returned, but it aligns
	with the RFC and common usage.

- Maker::Vcard.make -  full_name is now optional, it will be derived from name/N:

- Maker::Vcard#add_field -  better argument checking

- Maker::Vcard#copy - new

- Vcard#[] -  now limits return to fields with values

- Vcard#name - new 

- Vcard::Name - new 

- Vcard#nicknames - new 

- Field#params and Field#param - deprecated and undocumented, I could never
  remember the difference

- Field#pnames - new

- Field#pvalues - new

- Methods.casecmp? - new

- Field#pref= - new

- Field@pvalue_idel - new

- Field@pvalue_iadd - new


0.16 - 2006-02-19

- Packaged in gem format, experimental.

- Read vCards in UTF-8 or UTF-16, big or little endian, with or without a byte
  order mark (BOM).

- Fixed bug with rrule occurences containing the end of the interval. Reported
  with patch by Brad Ediger.

0.15 - 2005-07-29

- Fixed bug with param values with quoted strings, particularly a quoted string
  containing a : character, like
    name;param="file:///":value

  Thanks to Tamiji Homma for reporting this and sending me an example calendar.

- Vtodo.create - new
- Icalendar#push - allow Vtodos to be added

  Thanks to Maximillian Dornseif for contributing the above two Vtodo patches.

- Vevent.duration - bug fixes so duration can be calculated from begin/end, and
  end can be calculated from begin/duration

- Vcard#nickname that strips whitespace to see if there really is a nickname
