@@ -13,7 +13,6 @@ Check packaging guidelines:
 == FEATURES
 
 - DirectoryInfo#delete_if
-- DirectoryInfo#delete
 
 - don't encode TYPE= if there are no values
 
